--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
-        tools:showIn="@layout/activity_main">
+        tools:showIn="@layout/activity_main"
+        android:background="@android:color/white">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
+
+        <EditText
+            android:id="@+id/et_drama_list_search"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:hint="@string/hint_search_drama"
+            android:background="@android:color/transparent"
+            android:paddingLeft="40dp"
+
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ImageView
+            android:id="@+id/img_drama_list_search"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            app:layout_constraintTop_toTopOf="@+id/et_drama_list_search"
+            app:layout_constraintBottom_toBottomOf="@+id/et_drama_list_search"
+            app:layout_constraintLeft_toLeftOf="@+id/et_drama_list_search"/>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_drama_list"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="6dp"
+            app:layout_constraintTop_toBottomOf="@+id/et_drama_list_search"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
