--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,8 @@
             android:id="@+id/img_drama_list_search"
             android:layout_width="25dp"
             android:layout_height="25dp"
+            android:src="@drawable/search"
+            android:layout_marginLeft="6dp"
             app:layout_constraintTop_toTopOf="@+id/et_drama_list_search"
             app:layout_constraintBottom_toBottomOf="@+id/et_drama_list_search"
             app:layout_constraintLeft_toLeftOf="@+id/et_drama_list_search"/>
@@ -38,6 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:padding="6dp"
+            android:background="@null"
             app:layout_constraintTop_toBottomOf="@+id/et_drama_list_search"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
