--- a/app/src/main/res/layout/item_drama_list.xml
+++ b/app/src/main/res/layout/item_drama_list.xml
@@ -25,8 +25,7 @@
 
          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:onClick="@{(view) -> itemClick.onClicked(view, dramaModel)}">
+             android:layout_height="match_parent">
 
              <!--縮圖-->
              <ImageView
@@ -37,7 +36,8 @@
                  android:scaleType="centerCrop"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
-                 app:layout_constraintRight_toRightOf="parent"/>
+                 app:layout_constraintRight_toRightOf="parent"
+                 android:onClick="@{(view) -> itemClick.onClicked(view, dramaModel)}"/>
 
              <!--戲劇名稱-->
              <TextView
@@ -63,16 +63,32 @@
                  android:layout_marginBottom="5dp"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"/>
+
              <!--評分-->
-             <RatingBar
+             <com.iarcuschin.simpleratingbar.SimpleRatingBar
+                 android:id="@+id/simple_rating_bar"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
-                 android:numStars="1"
-                 android:textAlignment="center"
-                 android:layout_marginRight="5dp"
-                 app:layout_constraintBottom_toTopOf="@+id/tv_drama_list_update_date"
+                 app:srb_isIndicator="true"
+                 app:srb_starSize="20dp"
+                 android:layout_marginRight="10dp"
+                 android:layout_marginTop="10dp"
+                 app:srb_borderColor="@android:color/holo_red_light"
+                 app:srb_fillColor="@android:color/holo_red_light"
+                 app:srb_stepSize="0.001"
+                 app:srb_numberOfStars="1"
+                 bind:setSize="@{dramaModel.rating}"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/img_drama_item_picture"/>
+
+             <TextView
+                 android:id="@+id/tv_drama_list_rating"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 bind:setRating="@{dramaModel.rating}"
+                 app:layout_constraintTop_toBottomOf="@+id/simple_rating_bar"
+                 app:layout_constraintLeft_toLeftOf="@+id/simple_rating_bar"
+                 app:layout_constraintRight_toRightOf="@+id/simple_rating_bar"/>
 
          </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.cardview.widget.CardView>
