--- a/app/src/main/res/layout/activity_drama_detail.xml
+++ b/app/src/main/res/layout/activity_drama_detail.xml
@@ -5,12 +5,86 @@
     xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
 
+        <import type="android.view.View"/>
+        <variable name="dramaDetailModel"
+            type="com.chrisaj.chocotest.model.DramaModel"/>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--縮圖-->
+        <ImageView
+            android:id="@+id/img_drama_detail_thumb"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="150dp"
+            bind:loadFullImage="@{dramaDetailModel.thumb}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
+        <!--戲劇名稱-->
+        <TextView
+            android:id="@+id/tv_drama_detail_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:textSize="20dp"
+            android:text="@{dramaDetailModel.name}"
+            app:layout_constraintTop_toBottomOf="@+id/img_drama_detail_thumb"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <!--上架日期-->
+        <TextView
+            android:id="@+id/tv_drama_detail_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{dramaDetailModel.created_at}"
+            android:textSize="14dp"
+            bind:timeFormat="@{dramaDetailModel.created_at}"
+            android:layout_marginRight="10dp"
+            app:layout_constraintTop_toTopOf="@+id/tv_drama_detail_name"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_drama_detail_name"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+
+        <!--Rating評分-->
+        <com.iarcuschin.simpleratingbar.SimpleRatingBar
+            android:id="@+id/srb_drama_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srb_isIndicator="true"
+            app:srb_starSize="20dp"
+            android:layout_marginTop="10dp"
+            app:srb_borderColor="@android:color/holo_red_light"
+            app:srb_fillColor="@android:color/holo_red_light"
+            app:srb_stepSize="0.001"
+            app:srb_numberOfStars="5"
+            bind:setFullRating="@{dramaDetailModel.rating}"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_drama_detail_name"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+        <!--總瀏覽數-->
+        <TextView
+            android:id="@+id/tv_drama_detail_total_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            bind:withComma="@{dramaDetailModel.total_views}"
+            android:textSize="14dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/srb_drama_detail"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
