完成 下次開啟APP後 顯示上次最後搜尋狀態

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,8 +39,8 @@
             android:id="@+id/rv_drama_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:padding="6dp"
             android:background="@null"
+            android:overScrollMode="never"
             app:layout_constraintTop_toBottomOf="@+id/et_drama_list_search"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
